--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See the name for you IDE
-.idea
+*.idea
 # If you are using sqlite3
 *.sqlite3
 # Name of your virtuan env
-.vEnv
+*.vEnv
 *pyc
 media
-.env
+*.env
